--- a/crandall_guide_to_food/full_list.html
+++ b/crandall_guide_to_food/full_list.html
@@ -30,7 +30,10 @@
 			<li>WEBSITE: <a href= "https://www.bareburger.com/menu/" target="_blank">wwww.bareburger.com</a></li>
 			<li>PHONE: (347) 529-6673</li>
 			<li>ADDRESS: <a href= "https://www.google.com/maps/place/Bareburger/@40.6860895,-74.0294246,13z/data=!4m8!1m2!2m1!1sbareburger!3m4!1s0x0:0x9523879e95e6f569!8m2!3d40.6891968!4d-73.9923835" target="_blank">149 Court St, Brooklyn, NY 11201</a></li>
-			<li>NOTES: Take Out and delivery available via<a href="https://www.grubhub.com/restaurant/bareburger---cobble-hill-149-court-st-brooklyn/296511?utm_source=google_ppa&utm_medium=cpc&utm_campaign=National%20%7C%20All%20%7C%20PPA%20%7C%2008&utm_content=296511&chiri_offerPromoOneLiner=6ClUAlSjVkWxuRTA694RfS&chiri_offerPromo=21U71uQgnUk02K0ngHeT1u&chiri_restaurant-banner=73p1gnAGdnh5By9F9LyO9J&blockNavi=true&gclid=EAIaIQobChMIwcD7lo7R5gIVCbSzCh3tHQIpEBIYASAAEgK_oPD_BwE&gclsrc=aw.ds" target="_blank">Grubhub</a></li>
+			<li>NOTES: Take Out and delivery available via<a href="https://www.grubhub.com/restaurant/bareburger---cobble-hill-149-court-st-brooklyn/296511?utm_source=google_ppa&utm_medium=cpc&utm_campaign=National%20%7C%20All%20%7C%20PPA%20%7C%2008&utm_content=296511&chiri_offerPromoOneLiner=6ClUAlSjVkWxuRTA694RfS&chiri_offerPromo=21U71uQgnUk02K0ngHeT1u&chiri_restaurant-banner=73p1gnAGdnh5By9F9LyO9J&blockNavi=true&gclid=EAIaIQobChMIwcD7lo7R5gIVCbSzCh3tHQIpEBIYASAAEgK_oPD_BwE&gclsrc=aw.ds" target="_blank">Grubhub</a>
+			<br>DAD'S GO TO:
+			<br>MOM'S GO TO:
+			</li>
 		</ul>
 	<hr class="style-four">
 	<h3> Cafe Luluc </h3>
@@ -38,7 +41,10 @@
 			<li>WEBSITE: <a href= "https://cafeluluc.com/menu/" target="_blank">wwww.cafeluluc</a></li>
 			<li>PHONE: (718) 625-3815</li>
 			<li>ADDRESS: <a href= "https://www.google.com/maps/place/Cafe+Luluc/@40.6845026,-73.9944018,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25a50fea3e409:0x8f6e5a9ed6d95c88!8m2!3d40.6845026!4d-73.9922131" target="_blank">214 Smith St, Brooklyn, NY 11201</a></li>
-			<li>NOTES: Take Out only</li>
+			<li>NOTES: Take Out only
+			<br>DAD'S GO TO:
+			<br>MOM'S GO TO:
+			</li>
 		</ul>
 	<hr class="style-four">
 	<h3> Kitchen </h3>
@@ -46,7 +52,10 @@
 			<li>WEBSITE: <a href= "https://www.kitchenatcobblehill.com/#menus" target="_blank">www.kitchenatcobblehill</a></li>
 			<li>PHONE: (347) 689-4279</li>
 			<li>ADDRESS: <a href= "https://www.google.com/maps/place/Kitchen+at+Cobble+Hill/@40.6853646,-73.9968795,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25a507f2fb6e1:0x69da12a8a0f8529f!8m2!3d40.6853646!4d-73.9946908" target="_blank">254 Court St, Brooklyn, NY 11231</a></li>
-			<li>NOTES: Take Out, or Delivery via <a href= " ">GrubHub</a></li>
+			<li>NOTES: Take Out, or Delivery via <a href= " ">GrubHub</a>
+			<br>DAD'S GO TO:
+			<br>MOM'S GO TO:
+			</li>
 		</ul>
 	<hr class="style-four">
 	<h3> Kittery </h3>
@@ -54,7 +63,10 @@
 			<li>WEBSITE: <a href="http://www.kitterybrooklyn.net/menu" target="_blank">www.kitterybrooklyn.net</a> </li>
 			<li>PHONE: (718) 643-3293</li>
 			<li>ADDRESS: <a href= "https://www.google.com/maps/place/Kittery/@40.681421,-73.9960787,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25a574311c407:0xf286136e3caf2809!8m2!3d40.681417!4d-73.99389" target="_blank">305 Smith St, Brooklyn, NY 11231</a></li>
-			<li>NOTES: Take Out only</li>
+			<li>NOTES: Take Out only
+			<br>DAD'S GO TO:
+			<br>MOM'S GO TO:
+			</li>
 </div>
 
 
@@ -65,7 +77,10 @@
 			<li>WEBSITE: <a href="https://handynasty.net/brooklyn/menu/" target="_blank">www.handynasty.net/brooklyn</a>.com</a></li>
 			<li>PHONE: (718) 858-0588</li>
 			<li>ADDRESS: <a href="https://www.google.com/maps/place/Han+Dynasty/@40.6911555,-73.9848016,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25bb4aa91dfeb:0x5c2b8a3793cc65f5!8m2!3d40.6911515!4d-73.9826129" target="_blank">1 Dekalb Ave Brooklyn, NY 11201</a></li>
-			<li>NOTES: Take Out and Delivery via <a href="https://www.grubhub.com/restaurant/han-dynasty-1-dekalb-ave-brooklyn/916580?classicAffiliateId=%2Fr%2Fw%2F91514%2Frestaurant%2F916580" target="_blank">Grubhub</a></li>
+			<li>NOTES: Take Out and Delivery via <a href="https://www.grubhub.com/restaurant/han-dynasty-1-dekalb-ave-brooklyn/916580?classicAffiliateId=%2Fr%2Fw%2F91514%2Frestaurant%2F916580" target="_blank">Grubhub</a>
+			<br>DAD'S GO TO:
+			<br>MOM'S GO TO:
+			</li>
 		</ul>
 	<hr class="style-four">
 	<h3> Lichee Nut </h3>
@@ -73,29 +88,25 @@
 			<li>WEBSITE: <a href="https://www.licheenutny.com/menu/" target="_blank">www.licheenutny.com</a></li>
 			<li>PHONE: (718) 522-5565</li>
 			<li>ADDRESS: <a href="https://www.google.com/maps/place/Lichee+Nut/@40.6941945,-73.9949936,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25a48f10b45f5:0xf31210a5eaec13ed!8m2!3d40.6941905!4d-73.9928049" target="_blank">162 Montague street, Brooklyn Hieghts</a></li>
-			<li>NOTES: Take Out and Delivery via <a href="https://www.grubhub.com/restaurant/lichee-nut-162-montague-st-brooklyn/293927?utm_source=google&utm_medium=cpc&utm_campaign=New%2BYork%2C%2BNY%2B%7C%2BNew%2BYork%2C%2BNY%2B%7C%2BRestaurants%2B%7C%2BEXP%2B%7C%2BKeywordAdjustment%2B%7C%2BControl&utm_term=%2Blichee%20%2Bnut%20%2Bdelivery&efkwid=77821222519&gclid=EAIaIQobChMI1PnQhO7O5gIVjp-fCh3fAwlKEAAYASAAEgKtJvD_BwE&gclsrc=aw.ds" target="_blank">Grubhub</a></li>
+			<li>NOTES: Take Out and Delivery via <a href="https://www.grubhub.com/restaurant/lichee-nut-162-montague-st-brooklyn/293927?utm_source=google&utm_medium=cpc&utm_campaign=New%2BYork%2C%2BNY%2B%7C%2BNew%2BYork%2C%2BNY%2B%7C%2BRestaurants%2B%7C%2BEXP%2B%7C%2BKeywordAdjustment%2B%7C%2BControl&utm_term=%2Blichee%20%2Bnut%20%2Bdelivery&efkwid=77821222519&gclid=EAIaIQobChMI1PnQhO7O5gIVjp-fCh3fAwlKEAAYASAAEgKtJvD_BwE&gclsrc=aw.ds" target="_blank">Grubhub</a>
+			<br>DAD'S GO TO:
+			<br>MOM'S GO TO:
+			</li>
 		</ul>
 </div>
 
-<h2> FRENCH </h2>	
-<div class="boxtype">
-	<h3> Lichee Nut </h3>
-		<ul>
-			<li>WEBSITE: <a href="https://www.licheenutny.com/menu/" target="_blank">www.licheenutny.com</a></li>
-			<li>PHONE: (718) 522-5565</li>
-			<li>ADDRESS: <a href="https://www.google.com/maps/place/Lichee+Nut/@40.6941945,-73.9949936,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25a48f10b45f5:0xf31210a5eaec13ed!8m2!3d40.6941905!4d-73.9928049" target="_blank">162 Montague street, Brooklyn Hieghts</a></li>
-			<li>NOTES: Take Out and Delivery via <a href="https://www.grubhub.com/restaurant/lichee-nut-162-montague-st-brooklyn/293927?utm_source=google&utm_medium=cpc&utm_campaign=New%2BYork%2C%2BNY%2B%7C%2BNew%2BYork%2C%2BNY%2B%7C%2BRestaurants%2B%7C%2BEXP%2B%7C%2BKeywordAdjustment%2B%7C%2BControl&utm_term=%2Blichee%20%2Bnut%20%2Bdelivery&efkwid=77821222519&gclid=EAIaIQobChMI1PnQhO7O5gIVjp-fCh3fAwlKEAAYASAAEgKtJvD_BwE&gclsrc=aw.ds" target="_blank">Grubhub</a></li>
-		</ul>
-</div>
 
 <h2> GREEK </h2>	
 <div class="boxtype">
-	<h3> Joya </h3>
+	<h3>  </h3>
 		<ul>
 			<li>WEBSITE</li>
 			<li>PHONE: </li>
 			<li>ADDRESS : </li>
-			<li>NOTES: </li>
+			<li>NOTES: 
+			<br>DAD'S GO TO:
+			<br>MOM'S GO TO:
+			</li>
 		</ul>
 </div>
 
@@ -120,7 +131,10 @@
 			<li>WEBSITE: <a href="https://slicelife.com/restaurants/ny/brooklyn/11201/caruso-s-pizza-restaurant/menu?segment_id=cff1010a-c0b9-4c66-8b1b-6cfd434a4043&utm_campaign=partner_websites" target="_blank"> Menu</a></li>
 			<li>PHONE: (718) 797-2300</li>
 			<li>ADDRESS: <a href="https://www.google.com/maps/place/Caruso's/@40.6866315,-73.9930104,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25a51dc7449c1:0xd2f7e7338ca21c3c!8m2!3d40.6866275!4d-73.9908217" target="_blank">150 Smith St, Brooklyn, NY 11201</a></li>
-			<li>NOTES: Take Out or Delivery via <a href="https://slicelife.com/restaurants/ny/brooklyn/11201/caruso-s-pizza-restaurant/menu?segment_id=cff1010a-c0b9-4c66-8b1b-6cfd434a4043&utm_campaign=partner_websites" target="_blank">Caruso's website</a> or <a href="https://www.seamless.com/menu/carusos-pizzeria--restaurant-150-smith-st-brooklyn/21578" target="_blank">Seamless</a></li>
+			<li>NOTES: Take Out or Delivery via <a href="https://slicelife.com/restaurants/ny/brooklyn/11201/caruso-s-pizza-restaurant/menu?segment_id=cff1010a-c0b9-4c66-8b1b-6cfd434a4043&utm_campaign=partner_websites" target="_blank">Caruso's website</a> or <a href="https://www.seamless.com/menu/carusos-pizzeria--restaurant-150-smith-st-brooklyn/21578" target="_blank">Seamless</a>
+			<br>DAD'S GO TO:
+			<br>MOM'S GO TO:
+			</li>
 		</ul>
 	<hr class="style-four">
 	<h3> Claudine's</h3>
@@ -128,14 +142,21 @@
 			<li>WEBSITE: <a href="https://www.claudinesmenu.com/" target="_blank">www.claudinesmenu.com</a></li>
 			<li>PHONE: (718) 624-2361</li>
 			<li>ADDRESS: <a href="https://www.google.com/maps/place/Claudine's/@40.6813141,-73.9962004,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25a5767bfa667:0x585bf1ddcad55dd4!8m2!3d40.6813101!4d-73.9940117" target="_blank">214 Court St, Brooklyn, NY 11201</a></li>
-			<li>NOTES: Take Out or Delivery via <a href="https://slicelife.com/restaurants/ny/brooklyn/11231/claudine-s/menu?segment_id=d3639664-a4da-4d5c-8c51-f6fb077b0e9b&utm_campaign=partner_websites" target="_blank">their website</a> or <a href="https://www.seamless.com/menu/claudines-311-smith-st-brooklyn/288965" target="_blank">Seamless</a></li>
+			<li>NOTES: Take Out or Delivery via <a href="https://slicelife.com/restaurants/ny/brooklyn/11231/claudine-s/menu?segment_id=d3639664-a4da-4d5c-8c51-f6fb077b0e9b&utm_campaign=partner_websites" target="_blank">their website</a> or <a href="https://www.seamless.com/menu/claudines-311-smith-st-brooklyn/288965" target="_blank">Seamless</a>
+			<br>DAD'S GO TO:
+			<br>MOM'S GO TO:
+			<br>*Closed on Mondays
+			</li>
 		</ul><hr class="style-four">
 	<h3> Layla Jones</h3>
 		<ul>
 			<li>WEBSITE: <a href="http://laylajones.com/" target="_blank">www.laylajones.com</a></li>
 			<li>PHONE: (718) 624-2361</li>
 			<li>ADDRESS: <a href="https://www.google.com/maps/place/Layla+Jones/@40.6866679,-73.9962347,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25a500e325e67:0x5fb35a89ad902b58!8m2!3d40.6866639!4d-73.994046" target="_blank">214 Court St, Brooklyn, NY 11201</a></li>
-			<li>NOTES: Take Out or Delivery via <a href="https://www.seamless.com/menu/layla-jones-214-court-st-brooklyn/66857" target="_blank">Seamless</a></li>
+			<li>NOTES: Take Out or Delivery via <a href="https://www.seamless.com/menu/layla-jones-214-court-st-brooklyn/66857" target="_blank">Seamless</a>
+			<br>DAD'S GO TO:
+			<br>MOM'S GO TO:
+			</li>
 		</ul>
 </div>
 
@@ -146,7 +167,10 @@
 			<li>WEBSITE: <a href="https://www.osakany.com/menu" target="_blank">www.osakany.com/menu</a></li>
 			<li>PHONE: (929) 209-8297</li>
 			<li>ADDRESS: <a href="https://www.google.com/maps/place/Osaka/@40.684819,-73.9970481,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25a5a7eb54e13:0x4fa646fc6042eb8e!8m2!3d40.684815!4d-73.9948594" target="_blank"> 272 Court St, Brooklyn, NY 11231</a></li>
-			<li>NOTES: Take Out of Delivery via <a href="https://www.osakany.com/order-online" target="_blank">Osaka website</a>, or <a href="https://www.seamless.com/menu/osaka-272-court-st-brooklyn/66769?utm_source=google&utm_medium=cpc&utm_campaign=New%2BYork%2C%2BNY%2B%7C%2BBrooklyn%2C%2BNY%2B%7C%2BRestaurants&utm_term=%2Bosaka%20%2Bbrooklyn&efkwid=42437385985&gclid=EAIaIQobChMIn4uut-_O5gIVRcDICh0ruwm0EAAYASAAEgKP3vD_BwE&gclsrc=aw.ds" target="_blank">Seamless</a></li>
+			<li>NOTES: Take Out of Delivery via <a href="https://www.osakany.com/order-online" target="_blank">Osaka website</a>, or <a href="https://www.seamless.com/menu/osaka-272-court-st-brooklyn/66769?utm_source=google&utm_medium=cpc&utm_campaign=New%2BYork%2C%2BNY%2B%7C%2BBrooklyn%2C%2BNY%2B%7C%2BRestaurants&utm_term=%2Bosaka%20%2Bbrooklyn&efkwid=42437385985&gclid=EAIaIQobChMIn4uut-_O5gIVRcDICh0ruwm0EAAYASAAEgKP3vD_BwE&gclsrc=aw.ds" target="_blank">Seamless</a>
+			<br>DAD'S GO TO:
+			<br>MOM'S GO TO:
+			</li>
 		</ul>
 </div>
 
@@ -157,7 +181,10 @@
 			<li>WEBSITE: <a href="http://www.ssamkoreanbistro.com/" target="_blank">www.ssamkoreanbistro.com</a></li>
 			<li>PHONE: (917) 909-1248</li>
 			<li>ADDRESS: <a href="https://www.google.com/maps/place/Ssam+Korean+Bistro/@40.685937,-73.9934587,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25a51c9956e1b:0x8303b71dff2b97c0!8m2!3d40.685933!4d-73.99127" target="_blank">170 Smith Street, Brooklyn, NY 11201</a></li>
-			<li>NOTES: </li>
+			<li>NOTES: 
+			<br>DAD'S GO TO:
+			<br>MOM'S GO TO:
+			</li>
 		</ul>
 </div>
 <h2> LATIN AMERICAN</h2>	
@@ -167,7 +194,10 @@
 			<li>WEBSITE: <a href="https://menupages.com/fatty-daddy-taco/152-smith-st-brooklyn?utm_source=eat24hrs.com&utm_medium=grubhub-owned-delivery-properties&utm_campaign=growth_redirect-eat24whitelabel" target="_blank">fattydaddytaco.com</a></li>
 			<li>PHONE: (201) 482-7682/li>
 			<li>ADDRESS: <a href="https://www.google.com/maps/place/El+Nuevo+Cibao/@40.685852,-73.993394,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25a51c820682d:0x5ed8970399c71d83!8m2!3d40.685848!4d-73.9912053" target="_blank">172 Smith St, Brooklyn, NY 11201</a></li>
-			<li>NOTES: Take Out, or delivery via <a href="https://www.seamless.com/menu/cibao-latin-cuisine-172-smith-st-brooklyn/279092?utm_source=google&utm_medium=organic&utm_campaign=place-action-link" target="_blank">Seamless</a></li>
+			<li>NOTES: Take Out, or delivery via <a href="https://www.seamless.com/menu/cibao-latin-cuisine-172-smith-st-brooklyn/279092?utm_source=google&utm_medium=organic&utm_campaign=place-action-link" target="_blank">Seamless</a>
+			<br>DAD'S GO TO:
+			<br>MOM'S GO TO:
+			</li>
 		</ul>
 	<hr class="style-four">
 		<h3> Libertador </h3>
@@ -175,7 +205,10 @@
 			<li>WEBSITE: <a href="http://libertadornyc.com/Brooklyn" target="_blank">www.libertadornyc.com/brooklyn</a></li>
 			<li>PHONE: (347) 689-3122</li>
 			<li>ADDRESS : <a href="https://www.google.com/maps/place/Libertador/@40.687334,-74.0003647,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25a5b2f9c72a9:0xc7b94417eb22a5b!8m2!3d40.68733!4d-73.998176" target="_blank">404 Henry St, Brooklyn, NY 11201</a></li>
-			<li>NOTES: Take Out Only</li>
+			<li>NOTES: Take Out Only
+			<br>DAD'S GO TO:
+			<br>MOM'S GO TO:
+			</li>
 		</ul>
 <h2> MIDDLE EASTERN </h2>	
 <div class="boxtype">
@@ -184,7 +217,10 @@
 			<li>WEBSITE: <a href="https://darnafalafelbrooklynny.com/21335" target="_blank">wwww.darnafalafelbrooklnyny.com</a></li>
 			<li>PHONE: (347) 799-1673</li>
 			<li>ADDRESS: <a href= "https://www.google.com/maps/place/Darna+Falafel/@40.6870525,-73.9959871,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25a5004ab22ef:0x9b6d024505efda01!8m2!3d40.6870485!4d-73.9937984" target="_blank">200 Court St, Brooklyn, NY 11201</a></li>
-			<li>NOTES: Take Out and Devliery via <a href= "https://www.seamless.com/menu/darna-falafel-200-court-st-brooklyn/264844" target="_blank">Seamless</a></li>
+			<li>NOTES: Take Out and Devliery via <a href= "https://www.seamless.com/menu/darna-falafel-200-court-st-brooklyn/264844" target="_blank">Seamless</a>
+			<br>DAD'S GO TO:
+			<br>MOM'S GO TO:
+			</li>
 		</ul>
 </div>
 
@@ -195,7 +231,10 @@
 			<li>WEBSITE: <a href="https://menupages.com/fatty-daddy-taco/152-smith-st-brooklyn?utm_source=eat24hrs.com&utm_medium=grubhub-owned-delivery-properties&utm_campaign=growth_redirect-eat24whitelabel" target="_blank">fattydaddytaco.com</a></li>
 			<li>PHONE: (929) 295-9361</li>
 			<li>ADDRESS: <a href="https://www.google.com/maps/place/Fatty+Daddy+Taco+Restaurant/@40.686601,-73.9930533,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25a51dbb1aa8d:0xa36c9dfd336e5b2!8m2!3d40.686597!4d-73.9908646" target="_blank">152 Smith St, Brooklyn, NY 11201</a></li>
-			<li>NOTES: Take Out, or delivery via <a href="https://www.seamless.com/menu/fatty-daddy-taco-152-smith-st-brooklyn/319294?utm_source=google&utm_medium=cpc&utm_campaign=New%2BYork%2C%2BNY%2B%7C%2BBrooklyn%2C%2BNY%2B%7C%2BRestaurants&utm_term=%2Bfatty%20%2Bdaddy%20%2Btaco&efkwid=57776262490&gclid=EAIaIQobChMIk6zt3unO5gIVj5-fCh2DMgxQEAAYASAAEgK_fPD_BwE&gclsrc=aw.ds" target="_blank">Seamless</a></li>
+			<li>NOTES: Take Out, or delivery via <a href="https://www.seamless.com/menu/fatty-daddy-taco-152-smith-st-brooklyn/319294?utm_source=google&utm_medium=cpc&utm_campaign=New%2BYork%2C%2BNY%2B%7C%2BBrooklyn%2C%2BNY%2B%7C%2BRestaurants&utm_term=%2Bfatty%20%2Bdaddy%20%2Btaco&efkwid=57776262490&gclid=EAIaIQobChMIk6zt3unO5gIVj5-fCh2DMgxQEAAYASAAEgK_fPD_BwE&gclsrc=aw.ds" target="_blank">Seamless</a>
+			<br>DAD'S GO TO:
+			<br>MOM'S GO TO:
+			</li>
 		</ul>
 	<hr class="style-four">
 		<h3> Jolie Cantina </h3>
@@ -203,7 +242,10 @@
 			<li>WEBSITE: <a href="https://www.joliecantina.com/menu" target="_blank">www.joliecantina.com></a></li>
 			<li>PHONE: (718) 488-0777</li>
 			<li>ADDRESS : <a href="https://www.google.com/maps/place/Jolie+Cantina/@40.6836079,-73.9946553,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25a4ddc8c481d:0x655833cf197a4be4!8m2!3d40.6836039!4d-73.9924666" target="_blank">241 Smith St, Brooklyn, NY 11231</a></li>
-			<li>NOTES: Take Out Only</li>
+			<li>NOTES: Take Out Only
+			<br>DAD'S GO TO:
+			<br>MOM'S GO TO:
+			</li>
 		</ul>
 	<hr class="style-four">
 		<h3> Lobo </h3>
@@ -211,7 +253,10 @@
 			<li>WEBSITE: <a href="https://lobonyc.com/menus/" target="_blank">www.lobonyc.com</a></li>
 			<li>PHONE: (718) 858-7739</li>
 			<li>ADDRESS: <a href="https://www.google.com/maps/place/Lobo/@40.6865691,-73.996268,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25a5011fe45df:0xe3a190f16132ca6e!8m2!3d40.6865651!4d-73.9940793" target="_blank">218 Court St, Brooklyn, NY 11201</a></li>
-			<li>NOTES: Take Out only</li>
+			<li>NOTES: Take Out only
+			<br>DAD'S GO TO:
+			<br>MOM'S GO TO:
+			</li>
 		</ul>
 	
 </div>
@@ -223,7 +268,10 @@
 			<li>WEBSITE: <a href="http://www.joyabrooklyn.com/" target="_blank">www.joyabrooklyn.com</a></li>
 			<li>PHONE: (718) 222-3484</li>
 			<li>ADDRESS: <a href="https://www.google.com/maps/place/Joya/@40.6866705,-73.9957483,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25a5017a840af:0xc024f2952c17de0e!8m2!3d40.6866665!4d-73.9935596" target="_blank">215 Court St, Brooklyn, NY 11201</a></li>
-			<li>NOTES: Take Out and Delivery via <a href="https://www.seamless.com/menu/joya-215-court-st-brooklyn/583032" target="_blank">Seamless</a></li>
+			<li>NOTES: Take Out and Delivery via <a href="https://www.seamless.com/menu/joya-215-court-st-brooklyn/583032" target="_blank">Seamless</a>
+			<br>DAD'S GO TO:
+			<br>MOM'S GO TO:
+			</li>
 		</ul>
 	<hr class="style-four">
 	<h3> Cafe Chili </h3>
@@ -231,7 +279,10 @@
 			<li>WEBSITE: <a href="http://places.singleplatform.com/lemongrass-grill-5/menu?ref=google" target="_blank">Menu</a></li>
 			<li>PHONE: (718) 260-0066</li>
 			<li>ADDRESS: <a href="https://www.google.com/maps/place/Cafe+Chili/@40.688008,-73.9955797,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25a4fe807045d:0xe697458b8894a5bd!8m2!3d40.688004!4d-73.993391" target="_blank">172 Court St, Brooklyn, NY 11201</a></li>
-			<li>NOTES: Take Out, and delivery via <a href="https://www.seamless.com/menu/cafe-chili-thai-cuisine-172-court-st-brooklyn/66956?utm_source=google&utm_medium=cpc&utm_campaign=New%2BYork%2C%2BNY%2B%7C%2BBrooklyn%2C%2BNY%2B%7C%2BRestaurants&utm_term=%2Bcafe%20%2Bchili&efkwid=25769846065&gclid=EAIaIQobChMI0Iy83qnR5gIVhZOzCh2W0A9uEAAYASAAEgLPr_D_BwE&gclsrc=aw.ds" target="_blank">Seamless</a></li>
+			<li>NOTES: Take Out, and delivery via <a href="https://www.seamless.com/menu/cafe-chili-thai-cuisine-172-court-st-brooklyn/66956?utm_source=google&utm_medium=cpc&utm_campaign=New%2BYork%2C%2BNY%2B%7C%2BBrooklyn%2C%2BNY%2B%7C%2BRestaurants&utm_term=%2Bcafe%20%2Bchili&efkwid=25769846065&gclid=EAIaIQobChMI0Iy83qnR5gIVhZOzCh2W0A9uEAAYASAAEgLPr_D_BwE&gclsrc=aw.ds" target="_blank">Seamless</a>
+			<br>DAD'S GO TO:
+			<br>MOM'S GO TO:
+			</li>
 		</ul>
 </div>
 
